change to minima theme

--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-# theme: minima
-theme: alembic-jekyll-theme
+theme: minima
+# theme: alembic-jekyll-theme
 # remote_theme: daviddarnes/alembic
 plugins:
   - jekyll-feed
